crates/vexor-compiler/tests/golden/error/output/basic.err
Error: parse error
   ╭─[ input:2:1 ]
   │
 2 │ r = 10
   │ ┬  
   │ ╰── expected `fn`, `let`, `export`, `set`
───╯
